--- a/strings/strings/en.yml
+++ b/strings/strings/en.yml
@@ -40,13 +40,13 @@ can_4: "∆ #UsernameUpdate\n\n{}'s new username --> @{}"
 help_1: "`{}` is not a valid plugin!"
 help_2: "The bot did not respond to the inline query.\nConsider using `{}restart`"
 help_3: "`Please turn on inline mode for your bot from` @Botfather."
-help_4: "• Plugins"
-help_5: "Addons •"
-help_6: "••Voice Chat"
-help_7: "Inline Plugins••"
-help_8: "⚙️ Owner Tools"
-help_9: "Settings ⚙️"
-help_10: "••Cʟᴏꜱᴇ••"
+help_4: "• 𝙿𝙻𝚄𝙶𝙸𝙽𝙶"
+help_5: "𝗔𝗗𝗗𝗢𝗡𝗦 •"
+help_6: "••𝗩𝗢𝗜𝗖𝗘 𝗖𝗛𝗔𝗧"
+help_7: "𝙸𝙽𝙻𝙸𝙽𝙴 𝙿𝙻𝚄𝙶𝙸𝙽𝚂••"
+help_8: "⚙️ 𝙾𝚆𝙽𝙴𝚁 𝚃𝙾𝙾𝙻𝚂"
+help_9: "𝗦𝗘𝗧𝗧𝗜𝗡𝗚𝗦 ⚙️"
+help_10: "••ℂ𝕃𝕆𝕊𝔼••"
 help_11: "Plugin Name-{}\n✘ Commands Available -\n\n"
 help_12: "Voice Chat Bot is not active! Use .setdb VCBOT True to enable!"
 help_13: "Do '{}setdb ADDONS True' to Load Official Addons"
@@ -159,12 +159,12 @@ wspr_4: "User {} Not Found\nSearch Again"
 wspr_5: "You Can't do this"
 
 # afk
-afk_1: "**No Longer Afk**\n\nWas away for ~ `{}`"
+afk_1: "**𝗡𝗢 𝗟𝗢𝗡𝗚𝗘𝗥 𝗔𝗙𝗞**\n\n𝗪𝗔𝗦 𝗔𝗪𝗔𝗬 𝗙𝗢𝗥 ~ `{}`"
 afk_2: "#AFK\nSet AFK mode to False.\nWas AFK since ~ `{}`"
-afk_3: "**I'm currently AFK.**\nLast seen `{}` ago.\n\n**Reason:** `{}`"
-afk_4: "**I'm currently AFK.**\n\nLast seen `{}` ago."
-afk_5: "**I'm Going AFK.**\n\n**Reason:** `{}`"
-afk_6: "**I'm Going AFK.**"
+afk_3: "**ɪ ᴀᴍ ᴄᴜʀʀᴇɴᴛʟʏ ᴀғᴋ.**\nʟᴀsᴛ sᴇᴇɴ `{}` ᴀɢᴏ.\n\n**𝙍𝙀𝘼𝙎𝙊𝙉:** `{}`"
+afk_4: "**𝙸 𝙰𝙼 𝙲𝚄𝚁𝚁𝙴𝙽𝚃𝙻𝚈 𝙰𝙵𝙺.**\n\n𝙻𝙰𝚂𝚃 𝚂𝙴𝙴𝙽 `{}` 𝙰𝙶𝙾."
+afk_5: "**𝙸 𝙰𝙼 𝙶𝙾𝙸𝙽𝙶 𝙰𝙵𝙺.**\n\n**𝚁𝙴𝙰𝚂𝙾𝙽:** `{}`"
+afk_6: "**𝙸 𝙰𝙼 𝙶𝙾𝙸𝙽𝙶 𝙰𝙵𝙺.**"
 
 # bot
 bot_1: "Hey,  I am alive."
@@ -172,9 +172,9 @@ bot_2: "Stats"
 bot_3: "Repo"
 bot_4: "Support"
 bot_5: "• `Restarting...`"
-alive_1: "**The Ultroid Userbot...**\n\n**{}**\n\n✵ **Owner** - `{}`\n✵ **Ultroid** - `{}`\n✵ **Py-Ultroid** - `{}`\n✵ **UpTime** - `{}`\n✵ **Python** - `{}`\n✵ **Telethon** - `{}`\n✵ **Branch** - `{}`"
+alive_1: "**𝗨𝗟𝗧𝗥𝗢𝗜𝗗 𝗕𝗬 𝗦𝗔𝗝𝗔𝗟**\n\n**{}**\n\n✵ **ᴏᴡɴᴇʀ** - `{}`\n✵ **ᴜʟᴛʀᴏɪᴅ** - `{}`\n✵ **ᴘʏ-ᴜʟᴛʀᴏɪᴅ** - `{}`\n✵ **ᴜᴘᴛɪᴍᴇ** - `{}`\n✵ **ᴘʏᴛʜᴏɴ** - `{}`\n✵ **ᴛᴇʟᴇᴛʜᴏɴ** - `{}`\n✵ **ʙʀᴀɴᴄʜ** - `{}`"
 log: "**Heroku** Ultroid Logs.\nPasted [here]({}) too!"
-ping: "**Pong !!** `{}ms`\n**Uptime** - `{}`"
+ping: "╔═.✵.═══ - ═════════╗\n⪩ **𝙋𝙊𝙉𝙂** `{}𝙈𝙎`\n**⪩𝙐𝙋𝙏𝙄𝙈𝙀** - `{}`\n⪩ 🅄🅂🄴🅁 🄱🄾🅃 🄾🄵 ☞\nᕳ `ɱﾑน𝓣 ๛सजल™ #𝘼𝙏𝙃𝙀𝙄𝙎𝙏 🇮🇳` ᕲ\n╚═════════ - ═══.✵.═╝"
 usage: "**⚙️ Dyno Usage ⚙️**:\n\n-> **Dyno usage for** `{}`:\n  •  **{}h**  **{}m |** `[{}%]`\n-> **Dyno hours quota remaining this month**:\n  •  **{}h**  **{}m |** `[{}%]`\n\n**Total Disk Space**: `{}`\n**Used**: `{}`\n**Free**: `{}`\n\n**📊 Data Usage 📊**\n**Upload**: `{}`\n**Down**: `{}`\n\n**CPU**: `{}%`\n**RAM**: `{}%`\n**DISK**: `{}%`"
 usage_simple: "**Total Disk Space**: `{}`\n**Used**: `{}`\n**Free**: `{}`\n\n**📊 Data Usage 📊**\n**Upload**: `{}`\n**Down**: `{}`\n\n**CPU**: `{}%`\n**RAM**: `{}%`\n**DISK**: `{}%`"
 shutdown: "GoodBye {}.\n`Shutting down...`"
@@ -199,8 +199,8 @@ bd_8: "`Removing...`"
 bd_9: "Channel is already removed from database. "
 
 # calculator
-calc_1: "• Ultroid Inline Calculator •"
-calc_2: "Open Calculator Again"
+calc_1: "• 𝚄𝙻𝚃𝚁𝙾𝙸𝙳 𝙸𝙽𝙻𝙸𝙽𝙴 𝙲𝙰𝙻𝚄𝙻𝙰𝚃𝙾𝚁 •"
+calc_2: "• 𝙾𝙿𝙴𝙽 𝙲𝙰𝙻𝙲𝚄𝙻𝙰𝚃𝙾𝚁 𝙰𝙶𝙰𝙸𝙽 •"
 
 # channel hacks
 cha_1: "invalid Channel given"
@@ -213,7 +213,7 @@ cha_7: "Destination channels in database:"
 cha_8: "Source channels in database:"
 
 # carbon
-carbon_1: "Carbonised by [{}](tg://user?id={})"
+carbon_1: "𝙲𝙰𝚁𝙱𝙾𝙽𝙸𝚉𝙴𝙳 𝙱𝚈 [{}](tg://user?id={})"
 carbon_2: "`Reply to Message or readable file..`"
 carbon_3: "`Give Custom Color to Create Carbon...`"
 
@@ -647,3 +647,4 @@ help_warn: "\n\n•`{i}warn <reply to user> <reason>`\n    Gives Warn.\n\n•`{i
 help_webupload: " -\n\n• `{i}webupload`\n    Upload files on another server.\n"
 help_words: " -\n\n• `{i}meaning <word>`\n    Get the meaning of the word.\n\n• `{i}synonym <word>`\n    Get all synonyms.\n\n• `{i}antonym <word>`\n    Get all antonyms.\n\n• `{i}ud <word>`\n    Fetch word defenition from urbandictionary.\n"
 help_ziptools: "\n\n• `{i}zip <reply to file>`\n    zip the replied file\n    To set password on zip: `{i}zip <password>` reply to file\n\n• `{i}unzip <reply to zip file>`\n    unzip the replied file.\n\n• `{i}azip <reply to file>`\n   add file to batch for batch upload zip\n\n• `{i}dozip`\n   upload batch zip the files u added from `{i}azip`\n   To set Password: `{i}dozip <password>`\n\n"
+
